example_terraform/modules/eks/complete/argocd_ingress_betea.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/load-balancer-name: jhoh-tf-argocd-alb
      alb.ingress.kubernetes.io/subnets: subnet-0dae30bc0e8d4ff62,subnet-02f6f486e03b54af1,subnet-076ea93795834b57c
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:088755231083:certificate/3d2e746b-c233-4a9d-bfdc-267c366916ed
      alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
      alb.ingress.kubernetes.io/healthcheck-path: /login
      alb.ingress.kubernetes.io/success-codes: 200-399
      alb.ingress.kubernetes.io/backend-protocol: HTTPS
      # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
      alb.ingress.kubernetes.io/conditions.argogrpc: |
        [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    labels:
      app: argocd-ingress
    name: argocd
    namespace: argocd
  spec:
    rules:
    - host: argocd.jhoh1075.link
      http:
        paths:
        - path: /
          backend:
            service:
              name: argogrpc
              port:
                number: 443
          pathType: Prefix
        - path: /
          backend:
            service:
              name: argocd-server
              port:
                number: 443
          pathType: Prefix
    tls:
    - hosts:
      - argocd.jhoh1075.link
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2 #This tells AWS to send traffic from the ALB using HTTP2. Can use GRPC as well if you want to leverage GRPC specific features
  labels:
    app: argogrpc
  name: argogrpc
  namespace: argocd
spec:
  ports:
  - name: "443"
    port: 443
    protocol: TCP
    targetPort: 8080
  type: NodePort
